<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              tools:context="ogl4jo3.shaowei.ogl4jo3.accounting.common.statistics.expenses_income.expenses.ExpensesStatisticsFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/tv_from_date"
			style="@style/TextStyle.f3"
			tools:text="2017-07-05"/>

		<TextView
			style="@style/TextStyle.f3"
			android:text="@string/tv_between_date"/>

		<TextView
			android:id="@+id/tv_to_date"
			style="@style/TextStyle.f3"
			tools:text="2017-08-04"/>

		<Spinner
			android:id="@+id/sp_account"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout style="@style/Sep_line_h"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="horizontal"
		android:paddingLeft="12dp"
		android:paddingRight="12dp">

		<TextView
			android:id="@+id/tv_custom"
			style="@style/TextStyle.f3"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/tv_custom"/>

		<TextView
			android:id="@+id/tv_last_month"
			style="@style/TextStyle.f3"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/tv_last_month"/>

		<TextView
			android:id="@+id/tv_this_month"
			style="@style/TextStyle.f3"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:background="@color/gray_press"
			android:gravity="center"
			android:text="@string/tv_this_month"/>

		<TextView
			android:id="@+id/tv_half_year"
			style="@style/TextStyle.f3"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/tv_half_year"/>

		<TextView
			android:id="@+id/tv_one_year"
			style="@style/TextStyle.f3"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/tv_one_year"/>

	</LinearLayout>

	<LinearLayout style="@style/Sep_line_h"/>

</LinearLayout>
