<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="com.ogl4jo3.accounting.setting.accountingnotification.AccountingNotificationNewEditFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="12dp"
		android:paddingRight="12dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_accounting_notification_name"/>

		<EditText
			android:id="@+id/et_accounting_notification_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:hint="@string/hint_input_accounting_notification_name"
			android:imeOptions="actionDone"
			android:inputType="text"
			android:maxLength="16"
			android:textSize="@dimen/fs_4"/>
	</LinearLayout>


	<LinearLayout style="@style/Sep_line_h"/>

	<LinearLayout
		android:id="@+id/ll_category"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/selector_gray_press"
		android:orientation="vertical"
		android:paddingBottom="4dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingTop="4dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_category"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/iv_category_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginStart="10dp"
				android:contentDescription="@string/iv_category_icon"/>

			<TextView
				android:id="@+id/tv_category_name"
				style="@style/TextStyle.f3"
				android:layout_width="match_parent"
				android:gravity="end"
				android:text="@string/tv_choose_category_hint"/>
		</LinearLayout>

	</LinearLayout>

	<LinearLayout style="@style/Sep_line_h"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="4dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingTop="4dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_alarm_time"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical|end">

			<NumberPicker
				android:id="@+id/number_picker_hour"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>

			<TextView
				style="@style/TextStyle.f6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text=":"/>

			<NumberPicker
				android:id="@+id/number_picker_minute"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		</LinearLayout>

	</LinearLayout>

	<LinearLayout style="@style/Sep_line_h"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal">

		<Button
			android:id="@+id/btn_new"
			style="@style/Normal_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_add"/>

		<Button
			android:id="@+id/btn_save"
			style="@style/Normal_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_save"
			android:visibility="gone"/>

		<Button
			android:id="@+id/btn_del"
			style="@style/Normal_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_del"
			android:visibility="gone"/>
	</LinearLayout>
</LinearLayout>
