<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="ogl4jo3.shaowei.ogl4jo3.accounting.common.expenses.ExpensesNewEditFragment">

	<TextView
		android:id="@+id/tv_date"
		style="@style/TextStyle.f4"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:drawableLeft="@drawable/ic_calendar"
		android:drawablePadding="8dp"
		android:drawableStart="@drawable/ic_calendar"
		android:gravity="center_vertical"
		tools:text="2017-07-30"/>

	<LinearLayout style="@style/Sep_line_h"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="12dp"
		android:paddingRight="12dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_money"/>

		<EditText
			android:id="@+id/et_money"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawableLeft="@drawable/ic_money"
			android:drawableStart="@drawable/ic_money"
			android:gravity="end"
			android:imeOptions="actionDone"
			android:inputType="number"
			android:maxLength="8"
			android:textSize="@dimen/fs_5"/>
	</LinearLayout>


	<LinearLayout
		style="@style/Sep_line_h"/>

	<LinearLayout
		android:id="@+id/ll_category"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/selector_gray_press"
		android:orientation="vertical"
		android:paddingBottom="4dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingTop="4dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_category"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/iv_category_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginStart="10dp"
				android:contentDescription="@string/iv_category_icon"/>

			<TextView
				android:id="@+id/tv_category_name"
				style="@style/TextStyle.f3"
				android:layout_width="match_parent"
				android:gravity="end"
				android:text="@string/tv_choose_category_hint"/>
		</LinearLayout>

	</LinearLayout>


	<LinearLayout
		style="@style/Sep_line_h"/>

	<LinearLayout
		android:id="@+id/ll_account"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/selector_gray_press"
		android:orientation="vertical"
		android:paddingBottom="4dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingTop="4dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_account"/>


		<TextView
			android:id="@+id/tv_account_name"
			style="@style/TextStyle.f3"
			android:layout_gravity="end"
			android:text="@string/tv_choose_account_hint"/>

	</LinearLayout>


	<LinearLayout
		style="@style/Sep_line_h"/>

	<LinearLayout
		android:id="@+id/ll_fixed_charge"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/selector_gray_press"
		android:orientation="vertical"
		android:paddingBottom="4dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingTop="4dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_fixed_charge"/>


		<TextView
			style="@style/TextStyle.f3"
			android:layout_gravity="end"
			android:text="@string/tv_none"/>

	</LinearLayout>


	<LinearLayout
		style="@style/Sep_line_h"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/selector_gray_press"
		android:orientation="vertical"
		android:paddingBottom="4dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingTop="4dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_description"/>


		<EditText
			android:id="@+id/et_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:imeOptions="actionDone"
			android:inputType="text"
			android:maxLength="40"
			android:text="@string/tv_none"/>

	</LinearLayout>

	<LinearLayout
		style="@style/Sep_line_h"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal">

		<Button
			android:id="@+id/btn_new"
			style="@style/Normal_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_new"/>

		<Button
			android:id="@+id/btn_save"
			style="@style/Normal_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_save"
			android:visibility="gone"/>

		<Button
			android:id="@+id/btn_del"
			style="@style/Normal_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_del"
			android:visibility="gone"/>
	</LinearLayout>
</LinearLayout>
