<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              tools:context="ogl4jo3.shaowei.ogl4jo3.accounting.useteaching.UseTeachingStartFragment">

	<ImageView
		android:layout_width="120dp"
		android:layout_height="120dp"
		android:contentDescription="@string/iv_launch"
		android:src="@mipmap/ic_launcher"/>

	<TextView
		style="@style/TextStyle.f5"
		android:text="@string/app_name"/>

	<Button
		android:id="@+id/btn_start_use"
		style="@style/Normal_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:text="@string/btn_start_use"
		android:textSize="@dimen/fs_5"/>


</LinearLayout>
