<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.example.ogl4jo3.accounting.setting.accountmanagement.AccountNewEditFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="12dp"
		android:paddingRight="12dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_account_name"/>

		<EditText
			android:id="@+id/et_account_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:hint="@string/hint_input_account_name"
			android:imeOptions="actionDone"
			android:inputType="text"
			android:maxLength="8"
			android:textSize="@dimen/fs_4"/>
	</LinearLayout>


	<LinearLayout
		style="@style/Sep_line_h"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="4dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingTop="4dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_starting_amount"/>

		<EditText
			android:id="@+id/et_starting_amount"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:imeOptions="actionDone"
			android:inputType="number"
			android:maxLength="8"
			android:text="0"
			android:textSize="@dimen/fs_3"/>

	</LinearLayout>


	<LinearLayout
		style="@style/Sep_line_h"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="4dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingTop="4dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_account_category"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center_vertical">

			<ImageView
				android:id="@+id/iv_account_category_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/iv_account_category"
				android:src="@drawable/ic_account_category_cash"/>

			<Spinner
				android:id="@+id/sp_account_category"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:entries="@array/accountCategories"
				/>
		</LinearLayout>


	</LinearLayout>


	<LinearLayout
		style="@style/Sep_line_h"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="4dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingTop="4dp">

		<TextView
			style="@style/TextStyle.f1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_default_account"/>


		<Switch
			android:id="@+id/sw_default_account"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"/>

	</LinearLayout>

	<LinearLayout
		style="@style/Sep_line_h"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal">

		<Button
			android:id="@+id/btn_new"
			style="@style/Normal_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_new"/>

		<Button
			android:id="@+id/btn_save"
			style="@style/Normal_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_save"
			android:visibility="gone"/>

		<Button
			android:id="@+id/btn_del"
			style="@style/Normal_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_del"
			android:visibility="gone"/>
	</LinearLayout>

</LinearLayout>
